--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grrat",
+  "name": "@geardung/grrat",
   "version": "1.0.0",
-  "description": "",
+  "description": "ratvirus",
   "main": "RatCreator.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,14 @@
     "readline": "^1.3.0",
     "resolve-url": "^0.2.1",
     "stdio": "^2.1.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "http",
+    "url": "https://registry.npmjs.org/"
+  },
+  "keywords": [
+    "Geardung"
+  ],
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
